# ASTC_ARM02_GITCode

./: CMakeLists.txt
Source/: astcenc.h  astcenccli_internal.h
